# EpubMetadataEditor

./: .gitignore  README.md  dialogs.py  main.glade  main.py  pyproject.toml  utilities.py
