[tool.poetry]
name = "epubmetadataeditor"
version = "0.1.0"
description = ""
authors = ["T. E. Kalaycı"]
license = "GNU General Public License v3.0"

[tool.poetry.dependencies]
python = "^3.8"
EbookLib = "^0.17"
pgi = "^0.0.11"
pycairo = "^1.20.0"
PyGObject = "^3.38.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
