[project]
name = "epubmetadataeditor"
version = "0.1.0"
description = ""
authors = [
    {name = "T. E. Kalaycı"},
]
license = {text = "GNU General Public License v3.0"}
requires-python = ">=3.13"
dependencies = [
    "EbookLib",
    "PyGObject",
]

[dependency-groups]
dev = [
    "autopep8",
    "black",
    "isort"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
